--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link href=" {{ asset('assets/css/bootstrap.min.css') }} " rel="stylesheet">
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link href=" {{ asset('css/bootstrap.min.css') }} " rel="stylesheet">
+        <link rel="icon" href="{{ asset('img/cat.jpeg')}}">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -15,6 +15,16 @@
         {% endblock %}
     </head>
     <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+            {% block menu %}
+                <a class="navbar-brand" href="/login">login</a>
+                <a class="navbar-brand" href="/register">register</a>
+                
+
+            {% endblock %}
+            </nav>
+        </header>
         {% block body %}{% endblock %}
     </body>
 </html>
